[package]
authors = ["Flier Lu <flier.lu@gmail.com>", "Corentin Henry <corentinhenry@gmail.com>"]
name = "netlink-packet-sock-diag"
version = "0.3.1"
edition = "2018"

homepage = "https://github.com/rust-netlink/netlink-packet-sock-diag"
keywords = ["netlink", "linux", "sock_diag"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-netlink/netlink-packet-sock-diag"
description = "netlink packet types for the sock_diag subprotocol"

[features]
rich_nlas = []

[dependencies]
anyhow = "1.0.32"
byteorder = "1.3.4"
netlink-packet-core = { version = "0.5.0" }
netlink-packet-utils = { version = "0.5.2" }
bitflags = "1.2.1"
libc = "0.2.77"
smallvec = "1.4.2"

[dev-dependencies]
lazy_static = "1.4.0"
netlink-sys = { version = "0.8.4" }
